cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
project(Utility VERSION 1)
add_library(utility utility.cpp)
set_target_properties(utility PROPERTIES CXX_STANDARD 20)

if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
  target_compile_options(utility PRIVATE "-Wall")
  target_compile_options(utility PRIVATE "-Wextra")
  target_compile_options(utility PRIVATE "-pedantic")
  target_compile_options(utility PRIVATE "-Werror")
  target_compile_options(utility PRIVATE "-Wno-sign-compare")
endif()
